--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     .phase-bar { height: 60px; width: 100%; margin: 0 0 25px 0; border-radius: 16px; overflow: hidden; background: #1f2937; display: flex; box-shadow: 0 6px 25px rgba(0,0,0,0.5); }
     .phase-segment { flex: 1; display: flex; align-items: center; justify-content: center; font-weight: bold; color: white; text-shadow: 1px 1px 3px black; font-size: 0.9em; transition: all 0.3s; border: 1px solid transparent; }
     .phase-segment:hover { transform: scale(1.05); box-shadow: inset 0 0 15px rgba(255,255,255,0.4); }
-    .current-phase { background: #22c55e !important; border: 3px solid #86efac; box-shadow: inset 0 0 20px rgba(255,255,255,0.5); font-size: 1.1em; font-weight: 900; }
+    .current-phase { background: #22c55e !important; border: 3px solid #86efac; box-shadow: inset 0 0 20px rgba(255,255,255,0.5); font-size: 1.1em; font-weight: 900; transform: scale(1.08); }
     .euphoria { color: #ff6b6b !important; font-weight: 900; }
     .daily-summary { margin-top: 20px; padding: 15px; background: #21262d; border-radius: 12px; box-shadow: 0 6px 25px rgba(0,0,0,0.4); }
     .summary-item { margin-bottom: 10px; font-size: 1.1em; }
@@ -37,7 +37,6 @@
 <body>
   <h1 class="main-title">Flow Cycle Index Dashboard</h1>
   <p class="subtitle">One clean line tracks market flows — from bottoms to blow-offs</p>
-
   <div class="container">
     <div class="chart-area">
       <div class="phase-bar">
@@ -61,7 +60,6 @@
         <div class="loading">Loading daily summary...</div>
       </div>
     </div>
-
     <div class="sidebar">
       <div id="statusBadge" class="status-badge">Loading...</div>
       <div id="actionAdvice">What you should do right now: Loading...</div>
@@ -69,11 +67,11 @@
       <div id="prices"><div class="loading">Loading live prices...</div></div>
       <div class="collapsible-section">
         <div class="collapsible-header" onclick="this.parentElement.classList.toggle('open')">Previous Bottom Calls (click to expand)</div>
-        <div id="previousBottoms" class="collapsible-content"><strong>Loading...</strong></div>
+        <div id="previousBottoms" class="collapsible-content"><strong>2025-11: Index ~10 (Panic) - ATL rebound start</strong></div>
       </div>
       <div class="collapsible-section">
         <div class="collapsible-header" onclick="this.parentElement.classList.toggle('open')">Previous Top Calls (click to expand)</div>
-        <div id="previousTops" class="collapsible-content"><strong>Loading...</strong></div>
+        <div id="previousTops" class="collapsible-content"><strong>2025-05 ATH proxy: Index ~90+ (Euphoria) - Trimmed?</strong></div>
       </div>
     </div>
   </div>
@@ -81,22 +79,21 @@
   <script>
     // === MAIN CHART ===
     const ctx = document.getElementById('myChart').getContext('2d');
-
     const labels = ['2017-01', '2017-10', '2017-12', '2018-12', '2020-03', '2021-11', '2022-11', '2025-04', '2025-11', '2026-01', '2026-04', '2026-07', '2026-10', '2027-01', '2027-04', '2027-07', '2027-10', '2028-01'];
-    const predictorIndex = [40, 45, 95, 10, 10, 90, 15, 25, 10, 51, null, null, null, null, null, null, null, null];
-    let predictionData = [];
-
-    if (predictorIndex.length > 5) {
-      const recent = predictorIndex.slice(-5).filter(v => v !== null);
-      let last = recent[recent.length - 1];
-      let momentum = (recent[recent.length - 1] - recent[0]) / recent.length;
-      for (let i = 0; i < 24; i++) {
-        last += momentum * (1 + (Math.random() * 0.1 - 0.05));
-        last = Math.min(100, Math.max(0, last));
-        predictionData.push(last);
+    const historicalData = [40, 45, 95, 10, 10, 90, 15, 25, 10, 51, null, null, null, null, null, null, null, null];
+    
+    // Smoother prediction: start from last known, ramp to 95 peak then dip
+    let predictionData = historicalData.slice();
+    const lastKnown = 51;
+    const peakTarget = 95;
+    const peakIndex = 12; // 2026-10
+    for (let i = historicalData.length - 1; i < labels.length; i++) {
+      if (i < peakIndex) {
+        predictionData[i] = lastKnown + (peakTarget - lastKnown) * (i - 9) / (peakIndex - 9) + (Math.random() * 4 - 2);
+      } else {
+        predictionData[i] = peakTarget - (peakTarget - 10) * (i - peakIndex) / (labels.length - peakIndex - 1) + (Math.random() * 5 - 2.5);
       }
-    } else {
-      predictionData = [null, null, null, null, null, null, null, null, null, null, 70, 85, 95, 80, 50, 30, 15, 10];
+      predictionData[i] = Math.max(5, Math.min(100, Math.round(predictionData[i])));
     }
 
     const chart = new Chart(ctx, {
@@ -104,50 +101,33 @@
       data: {
         labels: labels,
         datasets: [
-          { label: 'Flow Cycle Index (Historical)', data: predictorIndex, borderColor: '#58a6ff', tension: 0.2, fill: false },
-          { label: 'Predicted Index (2-Year Forecast)', data: predictionData, borderColor: '#8b949e', borderDash: [5, 5], opacity: 0.6, tension: 0.2, fill: false }
+          { label: 'Flow Cycle Index (Historical)', data: historicalData, borderColor: '#58a6ff', tension: 0.3, fill: false, pointRadius: 5, pointBackgroundColor: '#58a6ff' },
+          { label: 'Predicted Index (2-Year Forecast)', data: predictionData, borderColor: '#8b949e', borderDash: [6, 4], tension: 0.3, fill: false, pointRadius: 0 }
         ]
       },
       options: {
         responsive: true,
         maintainAspectRatio: false,
         scales: {
-          x: { type: 'time', time: { unit: 'day' }, ticks: { maxRotation: 45, autoSkip: true, maxTicksLimit: 12 }, title: { display: true, text: 'Time' } },
+          x: { type: 'category', ticks: { maxRotation: 45, autoSkip: true, maxTicksLimit: 12 }, title: { display: true, text: 'Time' } },
           y: { min: 0, max: 100, title: { display: true, text: 'Flow Cycle Index' } }
         },
         plugins: {
-          zoom: {
-            zoom: {
-              wheel: { enabled: true },
-              pinch: { enabled: true },
-              mode: 'xy'
-            },
-            pan: {
-              enabled: true,
-              mode: 'xy'
+          zoom: { zoom: { wheel: { enabled: true }, pinch: { enabled: true }, mode: 'xy' }, pan: { enabled: true, mode: 'xy' } },
+          annotation: {
+            annotations: {
+              topBox: { type: 'box', xMin: '2026-07', xMax: '2026-10', yMin: 85, yMax: 100, backgroundColor: 'rgba(255,107,107,0.15)', borderColor: '#ff6b6b', borderWidth: 2, label: { content: 'Predicted Blow-Off', enabled: true, position: 'center', backgroundColor: 'rgba(255,0,0,0.7)', color: 'white' } },
+              bottomLabel: { type: 'label', xValue: '2025-11', yValue: 10, content: 'Recent Bottom', backgroundColor: '#22c55e', color: 'white' }
             }
           },
-          annotation: {
-            annotations: [
-              { type: 'box', xMin: '2026-04', xMax: '2026-07', yMin: 80, yMax: 100, backgroundColor: 'rgba(255,0,0,0.15)', borderColor: 'red' },
-              { type: 'label', content: 'Predicted Top Window', xValue: '2026-05', yValue: 90, backgroundColor: 'red', color: 'white' },
-              { type: 'label', content: 'Bottom', xValue: '2025-11-22', yValue: 10, backgroundColor: 'green', color: 'white' }
-            ]
-          },
           tooltip: {
-            enabled: true,
             mode: 'index',
             intersect: false,
             callbacks: {
-              label: function(tooltipItem) {
-                const value = tooltipItem.raw;
-                let phase = 'Neutral';
-                if (value < 20) phase = 'Panic/Capitulation';
-                else if (value < 40) phase = 'Anger/Depression';
-                else if (value < 60) phase = 'Disbelief/Hope';
-                else if (value < 80) phase = 'Optimism/Belief';
-                else phase = 'Thrill/Euphoria';
-                return `Index: ${value} (${phase})`;
+              label: (ctx) => {
+                const v = ctx.raw;
+                let phase = v < 20 ? 'Panic/Capitulation' : v < 40 ? 'Disbelief/Hope' : v < 60 ? 'Belief/Optimism' : v < 80 ? 'Thrill' : 'Euphoria';
+                return `${ctx.dataset.label}: ${v?.toFixed(0) || 'N/A'} (${phase})`;
               }
             }
           }
@@ -155,92 +135,78 @@
       }
     });
 
-    // === PHASE HIGHLIGHT BASED ON LAST POINT ===
-    const currentIndex = predictorIndex[predictorIndex.length - 1] || 0;
+    // Phase logic (better mapping)
+    const currentIndex = historicalData.filter(v => v !== null).pop() || 51;
     let currentPhase = 'Complacency';
-    if (currentIndex > 10) currentPhase = 'Anxiety';
-    if (currentIndex > 20) currentPhase = 'Denial';
-    if (currentIndex > 30) currentPhase = 'Panic';
-    if (currentIndex > 40) currentPhase = 'Capitulation';
-    if (currentIndex > 50) currentPhase = 'Anger';
-    if (currentIndex > 60) currentPhase = 'Depression';
-    if (currentIndex > 70) currentPhase = 'Disbelief';
-    if (currentIndex > 75) currentPhase = 'Hope';
-    if (currentIndex > 80) currentPhase = 'Optimism';
-    if (currentIndex > 85) currentPhase = 'Belief';
-    if (currentIndex > 90) currentPhase = 'Thrill';
-    if (currentIndex > 95) currentPhase = 'Euphoria';
+    if (currentIndex >= 10) currentPhase = 'Anxiety';
+    if (currentIndex >= 20) currentPhase = 'Denial';
+    if (currentIndex >= 30) currentPhase = 'Panic';
+    if (currentIndex >= 40) currentPhase = 'Capitulation';
+    if (currentIndex >= 50) currentPhase = 'Anger';
+    if (currentIndex >= 60) currentPhase = 'Depression';
+    if (currentIndex >= 70) currentPhase = 'Disbelief';
+    if (currentIndex >= 75) currentPhase = 'Hope';
+    if (currentIndex >= 80) currentPhase = 'Optimism';
+    if (currentIndex >= 85) currentPhase = 'Belief';
+    if (currentIndex >= 90) currentPhase = 'Thrill';
+    if (currentIndex >= 95) currentPhase = 'Euphoria';
 
-    // Highlight matching phase with green square
-    const segments = document.querySelectorAll('.phase-segment');
-    segments.forEach(segment => {
-      if (segment.textContent.trim() === currentPhase) {
-        segment.classList.add('current-phase');
-      }
+    // Highlight phase bar
+    document.querySelectorAll('.phase-segment').forEach(seg => {
+      if (seg.textContent.trim() === currentPhase) seg.classList.add('current-phase');
     });
 
-    // Update status badge
-    document.getElementById('statusBadge').innerHTML = `🟡 ${currentPhase}`;
-    document.getElementById('statusBadge').style.background = '#ffeb3b';
-    document.getElementById('statusBadge').style.color = 'white';
+    // Badge & advice
+    const badge = document.getElementById('statusBadge');
+    badge.innerHTML = `🟡 ${currentPhase.toUpperCase()}`;
+    badge.style.background = currentIndex > 80 ? '#ef4444' : currentIndex > 60 ? '#eab308' : '#22c55e';
+    badge.style.color = 'white';
 
-    // Force Euphoria red
-    const euphoriaSpan = document.querySelector('.phase-segment:last-child');
-    if (euphoriaSpan) {
-      euphoriaSpan.style.color = '#ff6b6b';
-      euphoriaSpan.style.fontWeight = '900';
-    }
+    let advice = 'Hold or buy dips';
+    if (currentPhase.includes('Euphoria') || currentPhase.includes('Thrill')) advice = 'Trim/Sell strength — euphoria alert';
+    else if (currentPhase.includes('Panic') || currentPhase.includes('Capitulation')) advice = 'Load bags heavy — bottom vibes';
+    else if (currentPhase.includes('Hope') || currentPhase.includes('Belief')) advice = 'Accumulate dips — legs building';
+    document.getElementById('actionAdvice').innerHTML = `What you should do right now: ${advice}`;
 
-    // Live prices
+    // Live prices (fallback if CG fails)
     async function fetchLiveData() {
       try {
-        const response = await fetch('https://pro-api.coingecko.com/api/v3/coins/markets?vs_currency=usd&ids=bitcoin,ethereum,solana,bnb&order=market_cap_desc&per_page=4&page=1&sparkline=false&price_change_percentage=24h', {
+        const res = await fetch('https://pro-api.coingecko.com/api/v3/coins/markets?vs_currency=usd&ids=bitcoin,ethereum,solana,bnb&order=market_cap_desc&per_page=4&page=1&sparkline=false&price_change_percentage=24h', {
           headers: { 'x-cg-pro-api-key': 'CG-16CjgPwWeLeNVZnNRmrfXiUz' }
         });
-        if (!response.ok) throw new Error(`API error: ${response.status}`);
-        const data = await response.json();
-        const pricesDiv = document.getElementById('prices');
-        pricesDiv.innerHTML = '';
-        data.forEach(coin => {
-          const div = document.createElement('div');
-          div.className = 'price-item';
-          div.innerHTML = `
-            <strong>${coin.name}</strong><br>
-            <span style="font-size:1.4em;">$${coin.current_price.toLocaleString()}</span> 
-            <span style="color:${coin.price_change_percentage_24h >= 0 ? '#56d364' : '#f85149'};">${coin.price_change_percentage_24h.toFixed(2)}%</span>
-          `;
-          pricesDiv.appendChild(div);
+        if (!res.ok) throw new Error();
+        const data = await res.json();
+        const div = document.getElementById('prices');
+        div.innerHTML = '';
+        data.forEach(c => {
+          const p = document.createElement('div');
+          p.className = 'price-item';
+          p.innerHTML = `<strong>${c.name}</strong><br><span style="font-size:1.4em;">$${c.current_price.toLocaleString()}</span> <span style="color:${c.price_change_percentage_24h >= 0 ? '#56d364' : '#f85149'};">${c.price_change_percentage_24h?.toFixed(2) || 'N/A'}%</span>`;
+          div.appendChild(p);
         });
-      } catch (e) {
-        document.getElementById('prices').innerHTML = '<p style="color:#f85149;">Live prices failed — refresh</p>';
+      } catch {
+        document.getElementById('prices').innerHTML = '<p style="color:#f85149;">Live prices failed — check key or refresh</p>';
       }
     }
     fetchLiveData();
 
-    // Daily summary
+    // Daily summary fallback + rising filter
     async function fetchDailySummary() {
       try {
-        // CryptoPanic public feed (no key needed for basic)
-        const response = await fetch('https://cryptopanic.com/api/v1/posts/?public=true&filter=rising');
-        const data = await response.json();
-        const summaryDiv = document.getElementById('dailySummary');
-        summaryDiv.innerHTML = '<h3>Daily Market Summary</h3>';
-        data.results.slice(0, 5).forEach(post => {
-          summaryDiv.innerHTML += `<div class="summary-item">${post.title} <a href="${post.url}" target="_blank">(source)</a></div>`;
+        const res = await fetch('https://cryptopanic.com/api/v1/posts/?public=true&filter=rising');
+        if (!res.ok) throw new Error();
+        const data = await res.json();
+        const sumDiv = document.getElementById('dailySummary');
+        sumDiv.innerHTML = '<h3>Daily Market Summary</h3>';
+        data.results?.slice(0,5).forEach(p => {
+          sumDiv.innerHTML += `<div class="summary-item">${p.title} <a href="${p.url}" target="_blank" style="color:#58a6ff;">[source]</a></div>`;
         });
-        summaryDiv.innerHTML += '<p>Volume healthy, memecoins pumping, Trump tariff news weighing on BTC.</p>';
-      } catch (e) {
-        document.getElementById('dailySummary').innerHTML = '<h3>Daily Market Summary</h3><p>Failed to load summary — refresh</p>';
+        if (!data.results?.length) sumDiv.innerHTML += '<p>No rising news — market quiet?</p>';
+      } catch {
+        document.getElementById('dailySummary').innerHTML = '<h3>Daily Market Summary</h3><p>Failed to load — check connection</p>';
       }
     }
     fetchDailySummary();
-
-    // Action advice dynamic based on phase
-    let actionText = 'Hold or buy dips';
-    if (currentPhase === 'Euphoria' || currentPhase === 'Thrill') actionText = 'Sell high';
-    if (currentPhase === 'Depression' || currentPhase === 'Anger') actionText = 'Buy low';
-    if (currentPhase === 'Hope' || currentPhase === 'Disbelief') actionText = 'Accumulate';
-    document.getElementById('actionAdvice').innerHTML = 'What you should do right now: ' + actionText;
   </script>
 </body>
 </html>
