--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
     .loading { color: #8b949e; text-align: center; margin: 30px 0; font-style: italic; }
     .daily-summary { margin-top: 20px; padding: 15px; background: #21262d; border-radius: 12px; box-shadow: 0 6px 25px rgba(0,0,0,0.4); }
     .summary-item { margin-bottom: 10px; font-size: 1.1em; }
+    .summary-entry { margin-bottom: 15px; padding-bottom: 10px; border-bottom: 1px solid #30363d; }
+    .summary-timestamp { font-size: 0.9em; color: #8b949e; margin-bottom: 5px; }
     .grok-section { margin-top: 20px; background: #21262d; padding: 15px; border-radius: 12px; }
     #grok-button { width: 100%; padding: 12px; background: #8b5cf6; color: white; border: none; border-radius: 8px; font-weight: bold; cursor: pointer; }
     #grok-button:hover { background: #7c3aed; }
@@ -84,6 +86,7 @@
     let currentIndex = 51;
     let currentPhase = 'Anger';
 
+    // === MONTHLY CHART DATA (unchanged) ===
     function generateMonthlyDates(startYear, startMonth, endYear, endMonth) {
       const dates = [];
       let current = new Date(startYear, startMonth - 1, 1);
@@ -141,67 +144,23 @@
       data: {
         labels: monthlyDates,
         datasets: [
-          {
-            label: 'Flow Cycle Index (Historical)',
-            data: historicalMonthly,
-            borderColor: '#58a6ff',
-            backgroundColor: 'rgba(88,166,255,0.15)',
-            fill: true,
-            tension: 0.3,
-            pointRadius: 0,
-            borderWidth: 2
-          },
-          {
-            label: 'Predicted Index (2-Year Forecast)',
-            data: predictionMonthly,
-            borderColor: '#8b949e',
-            backgroundColor: 'rgba(139,148,158,0.1)',
-            borderDash: [6, 4],
-            fill: true,
-            tension: 0.3,
-            pointRadius: 0,
-            borderWidth: 2
-          }
+          { label: 'Flow Cycle Index (Historical)', data: historicalMonthly, borderColor: '#58a6ff', backgroundColor: 'rgba(88,166,255,0.15)', fill: true, tension: 0.3, pointRadius: 0, borderWidth: 2 },
+          { label: 'Predicted Index (2-Year Forecast)', data: predictionMonthly, borderColor: '#8b949e', backgroundColor: 'rgba(139,148,158,0.1)', borderDash: [6, 4], fill: true, tension: 0.3, pointRadius: 0, borderWidth: 2 }
         ]
       },
       options: {
         responsive: true,
         maintainAspectRatio: false,
         scales: {
-          x: {
-            type: 'time',
-            time: { unit: 'month', displayFormats: { month: 'MMM yyyy' }, tooltipFormat: 'MMMM yyyy' },
-            ticks: { maxRotation: 45, autoSkip: true, maxTicksLimit: 24 },
-            title: { display: true, text: 'Time' }
-          },
+          x: { type: 'time', time: { unit: 'month', displayFormats: { month: 'MMM yyyy' }, tooltipFormat: 'MMMM yyyy' }, ticks: { maxRotation: 45, autoSkip: true, maxTicksLimit: 24 }, title: { display: true, text: 'Time' } },
           y: { min: 0, max: 100, title: { display: true, text: 'Flow Cycle Index' } }
         },
         plugins: {
-          zoom: {
-            zoom: { enabled: false },
-            pan: { enabled: false }
-          },
+          zoom: { zoom: { enabled: false }, pan: { enabled: false } },
           annotation: {
             annotations: {
-              topBox: {
-                type: 'box',
-                xMin: new Date(2026, 6, 1),
-                xMax: new Date(2026, 9, 1),
-                yMin: 85,
-                yMax: 100,
-                backgroundColor: 'rgba(255,107,107,0.15)',
-                borderColor: '#ff6b6b',
-                borderWidth: 2,
-                label: { content: 'Predicted Blow-Off', enabled: true, position: 'center', backgroundColor: 'rgba(255,0,0,0.7)', color: 'white' }
-              },
-              bottomLabel: {
-                type: 'label',
-                xValue: new Date(2025, 10, 1),
-                yValue: 10,
-                content: 'Recent Bottom',
-                backgroundColor: '#22c55e',
-                color: 'white'
-              }
+              topBox: { type: 'box', xMin: new Date(2026, 6, 1), xMax: new Date(2026, 9, 1), yMin: 85, yMax: 100, backgroundColor: 'rgba(255,107,107,0.15)', borderColor: '#ff6b6b', borderWidth: 2, label: { content: 'Predicted Blow-Off', enabled: true, position: 'center', backgroundColor: 'rgba(255,0,0,0.7)', color: 'white' } },
+              bottomLabel: { type: 'label', xValue: new Date(2025, 10, 1), yValue: 10, content: 'Recent Bottom', backgroundColor: '#22c55e', color: 'white' }
             }
           },
           tooltip: {
@@ -219,6 +178,7 @@
       }
     });
 
+    // === DYNAMIC INDEX & UI ===
     async function updateDynamicIndexAndUI() {
       try {
         const res = await fetch('https://api.coingecko.com/api/v3/coins/markets?vs_currency=usd&ids=bitcoin,solana&order=market_cap_desc&per_page=2&page=1&sparkline=false&price_change_percentage=30d');
@@ -258,11 +218,11 @@
         else if (currentPhase === 'Hope' || currentPhase === 'Belief' || currentPhase === 'Optimism') advice = 'Accumulate dips — legs building';
         document.getElementById('actionAdvice').innerHTML = `What you should do right now: ${advice}`;
       } catch (e) {
-        console.log('Dynamic update failed, using defaults');
+        console.log('Dynamic update failed');
       }
     }
-    updateDynamicIndexAndUI();
 
+    // === GROK INSIGHT ===
     const apiKey = 'PASTE_YOUR_GROK_API_KEY_HERE_LOCALLY_ONLY';
 
     async function getGrokInsight() {
@@ -272,15 +232,12 @@
       try {
         const res = await fetch('https://api.x.ai/v1/chat/completions', {
           method: 'POST',
-          headers: {
-            'Content-Type': 'application/json',
-            'Authorization': `Bearer ${apiKey}`
-          },
+          headers: { 'Content-Type': 'application/json', 'Authorization': `Bearer ${apiKey}` },
           body: JSON.stringify({
             model: 'grok-4-1-fast-reasoning',
             messages: [
-              { role: 'system', content: 'You are a savage crypto trader with no filter. Give short, brutal, honest takes on market phases, memes, $GORK, and what Lano should do.' },
-              { role: 'user', content: `Current Flow Cycle Index ~${Math.round(currentIndex)} in ${currentPhase} phase. BTC ~$87k, SOL ~$122, $GORK rebounding with volume up. Blow-off top in Q4 2026? Real move rn — buy dips, hold, trim? Keep it savage & short.` }
+              { role: 'system', content: 'You are a savage crypto trader with no filter. Give short, brutal, honest takes.' },
+              { role: 'user', content: `Current Flow Cycle Index ~${Math.round(currentIndex)} in ${currentPhase} phase. BTC ~$87k, SOL ~$122, $GORK rebounding. Blow-off top in Q4 2026? Move rn — buy dips, hold, trim? Savage & short.` }
             ],
             temperature: 0.8,
             max_tokens: 200
@@ -291,57 +248,37 @@
         const data = await res.json();
         respDiv.innerHTML = data.choices[0].message.content.trim();
       } catch (err) {
-        respDiv.innerHTML = `Error: ${err.message}. Check key/balance/network/console.`;
+        respDiv.innerHTML = `Error: ${err.message}. Check key/network/console.`;
       }
     }
 
     document.getElementById('grok-button').addEventListener('click', getGrokInsight);
 
+    // === $GORK from CoinGecko (public, stable) ===
     async function fetchGorkData() {
       const card = document.getElementById('gorkCard');
-      card.innerHTML = '<strong>$GORK (Solana)</strong><br><div class="loading">Loading $GORK data...</div>';
+      card.innerHTML = '<strong>$GORK (Solana)</strong><br><div class="loading">Loading...</div>';
 
       try {
-        // Primary: DexScreener
-        let res = await fetch('https://api.dexscreener.com/latest/dex/tokens/76EDL5qNcte2ZH29quTaFzagXjWAEY83CATEjyA6pump');
-        if (!res.ok) throw new Error('DexScreener HTTP error');
-
-        let data = await res.json();
-        let pair = data.pairs?.[0] || {};
-
-        if (!pair.priceUsd) {
-          // Fallback: Birdeye public (no key needed for basic)
-          res = await fetch('https://public-api.birdeye.so/defi/token_overview?address=76EDL5qNcte2ZH29quTaFzagXjWAEY83CATEjyA6pump', {
-            headers: { 'x-chain': 'solana' }
-          });
-          if (res.ok) {
-            data = await res.json();
-            pair = {
-              priceUsd: data.data?.value || null,
-              marketCap: data.data?.mc || null,
-              volume: { h24: data.data?.v24hUSD || null },
-              priceChange: { h24: data.data?.priceChange24h || null },
-              liquidity: { usd: data.data?.liquidity || null },
-              pairAddress: '76EDL5qNcte2ZH29quTaFzagXjWAEY83CATEjyA6pump'
-            };
-          }
-        }
+        const res = await fetch('https://api.coingecko.com/api/v3/coins/markets?vs_currency=usd&ids=gork-2&order=market_cap_desc&per_page=1&page=1&sparkline=false&price_change_percentage=24h');
+        if (!res.ok) throw new Error('CG HTTP error');
+        const data = await res.json();
+        const coin = data[0] || {};
 
         card.innerHTML = `
           <strong>$GORK (Solana)</strong><br>
-          <span style="font-size:1.4em;">$${pair.priceUsd?.toFixed(8) || 'N/A'}</span><br>
-          MC: $${(pair.marketCap / 1e6)?.toFixed(2) || 'N/A'}M<br>
-          24h Vol: $${(pair.volume?.h24 / 1e3)?.toFixed(0) || 'N/A'}K (${pair.priceChange?.h24?.toFixed(2) || 'N/A'}%)<br>
-          Liq: $${(pair.liquidity?.usd / 1e3)?.toFixed(0) || 'N/A'}K<br>
-          <a href="https://dexscreener.com/solana/${pair.pairAddress || '76EDL5qNcte2ZH29quTaFzagXjWAEY83CATEjyA6pump'}" target="_blank" style="color:#58a6ff; font-size:0.9em;">View on DexScreener</a>
+          <span style="font-size:1.4em;">$${coin.current_price?.toFixed(8) || 'N/A'}</span><br>
+          MC: $${(coin.market_cap / 1e6)?.toFixed(2) || 'N/A'}M<br>
+          24h Vol: $${(coin.total_volume / 1e3)?.toFixed(0) || 'N/A'}K (${coin.price_change_percentage_24h?.toFixed(2) || 'N/A'}%)<br>
+          <a href="https://www.coingecko.com/en/coins/gork-2" target="_blank" style="color:#58a6ff; font-size:0.9em;">View on CoinGecko</a>
         `;
       } catch (err) {
-        console.error('GORK fetch error:', err);
-        card.innerHTML = '<strong>$GORK</strong><br><p style="color:#f85149;">Failed to load — check connection or try later</p>';
+        console.error('GORK CG fetch error:', err);
+        card.innerHTML = '<strong>$GORK</strong><br><p style="color:#f85149;">Failed to load — check connection</p>';
       }
     }
-    fetchGorkData();
 
+    // === LIVE MAJORS ===
     async function fetchLiveData() {
       try {
         const res = await fetch('https://api.coingecko.com/api/v3/coins/markets?vs_currency=usd&ids=bitcoin,ethereum,solana,bnb&order=market_cap_desc&per_page=4&page=1&sparkline=false&price_change_percentage=24h');
@@ -359,44 +296,64 @@
         document.getElementById('prices').innerHTML = '<p style="color:#f85149;">Live prices failed — refresh</p>';
       }
     }
-    fetchLiveData();
 
+    // === DAILY SUMMARY WITH HISTORY ===
     async function fetchDailySummary() {
       const sumDiv = document.getElementById('dailySummary');
-      sumDiv.innerHTML = '<h3>Daily Market Summary</h3>';
+      const now = new Date();
+      const timestamp = now.toLocaleString('en-US', { month: 'short', day: 'numeric', year: 'numeric', hour: 'numeric', minute: '2-digit', hour12: true }) + ' EST';
+
+      let history = JSON.parse(localStorage.getItem('dailySummaryHistory') || '[]');
+
+      // Add new entry
+      let newEntry = `<div class="summary-entry"><div class="summary-timestamp">${timestamp}</div>`;
       try {
         const res = await fetch('https://api.coingecko.com/api/v3/global');
         if (!res.ok) throw new Error();
         const data = await res.json();
         const g = data.data;
-        sumDiv.innerHTML += `
-          <div class="summary-item">Market Cap: $${g.total_market_cap.usd.toLocaleString()} (${g.market_cap_change_percentage_24h_usd?.toFixed(2) || 'N/A'}% 24h)</div>
-          <div class="summary-item">BTC Dominance: ${g.market_cap_percentage.btc?.toFixed(2) || 'N/A'}%</div>
-          <div class="summary-item">Total Volume 24h: $${g.total_volume.usd.toLocaleString()}</div>
-          <p style="margin-top:10px;">Meme supercycle heating in 2026, BTC dom fade incoming, Elon/Grok narrative revival possible. Hold dips in Anger/Belief phase — $GORK rebounding.</p>
+        newEntry += `
+          Market Cap: $${g.total_market_cap.usd.toLocaleString()} (${g.market_cap_change_percentage_24h_usd?.toFixed(2) || 'N/A'}% 24h)<br>
+          BTC Dominance: ${g.market_cap_percentage.btc?.toFixed(2) || 'N/A'}%<br>
+          Total Volume 24h: $${g.total_volume.usd.toLocaleString()}<br>
+          <p>Meme supercycle heating in 2026, BTC dom fade incoming, Elon/Grok narrative revival possible. Hold dips in ${currentPhase} phase — $GORK rebounding.</p>
         `;
       } catch {
-        sumDiv.innerHTML += `
-          <p>Failed to load live data — fallback mode</p>
-          <p>2026 vibes: BTC holding $87k support, SOL memes rebounding, $GORK volume ticking up. Supercycle reset in play — diamond hands win. Watch for Elon nod.</p>
+        newEntry += `
+          <p>Failed to load live data — fallback</p>
+          <p>2026 vibes: BTC ~$87k support, SOL memes rebounding, $GORK volume ticking up. Supercycle reset in play — diamond hands win.</p>
         `;
       }
+      newEntry += '</div>';
+
+      // Add to history (newest first)
+      history.unshift(newEntry);
+
+      // Keep only last 7 days
+      const oneWeekAgo = Date.now() - 7 * 24 * 60 * 60 * 1000;
+      history = history.filter(entry => {
+        const entryTime = new Date(entry.match(/<div class="summary-timestamp">(.*?)<\/div>/)?.[1] || '').getTime();
+        return entryTime > oneWeekAgo;
+      });
+
+      localStorage.setItem('dailySummaryHistory', JSON.stringify(history));
+
+      // Render all
+      sumDiv.innerHTML = '<h3>Daily Market Summary</h3>' + history.join('');
     }
+
+    // Initial loads + auto-refresh
+    updateDynamicIndexAndUI();
+    fetchLiveData();
+    fetchGorkData();
     fetchDailySummary();
 
-    // Auto-refresh everything every 60 seconds
     setInterval(() => {
       fetchLiveData();
       fetchGorkData();
       updateDynamicIndexAndUI();
       fetchDailySummary();
     }, 60000);
-
-    // Initial calls
-    updateDynamicIndexAndUI();
-    fetchGorkData();
-    fetchLiveData();
-    fetchDailySummary();
 
     document.getElementById('grok-button').addEventListener('click', getGrokInsight);
   </script>
